[package]
name = "luma-food"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
dotenv = "0.15.0"
langchain-rust = "4.4.2"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
